# incar_baselines

./: README.md  pyproject.toml
dataset_conversions/: __init__.py  lerobot_v2.py  lerobot_v2_step.py
gr00t/: README.md  gr00t.py
gr00t/nvidia/: modality_config.py  policy_client.py
incar_baselines_ai/: __init__.py  act.py  diffusion.py  optimizers.py  schedulers.py
s2_processing/: s2.py
