
[project]
name = "incar_baselines"
version = "1.0.0"
dependencies = [
    "diffusers",
    "einops"
]

[project.optional-dependencies]
s2 = [
    "depth_anything_3@git+https://github.com/ByteDance-Seed/Depth-Anything-3",
    "sam2",
    "opencv-python",
    "transformers"
]
gr00t = [
    "zmq",
    "msgpack",
    "jsonlines",
    "pyarrow"
]

[tool.setuptools]
packages = ["incar_baselines_ai", "s2_processing", "gr00t", "dataset_conversions"]

[project.entry-points.'incar_extensions.processing']
s2_processing = 's2_processing'
conversions = 'dataset_conversions'

[project.entry-points.'incar_extensions.ai']
incar_baselines_ai = 'incar_baselines_ai'
gr00t = 'gr00t'
